Principal Side Completed. To Do: Chart is pending

--- a/StudentSupport/templates/committees/committee_dashboard.html
+++ b/StudentSupport/templates/committees/committee_dashboard.html
@@ -7,7 +7,7 @@
     <!-- Meta -->
     <meta name="author" content="Jasmin Makwana(160210107030), Kinjal Doshi(160210107011), Jinesh Kamdar(160210107024), Vishwa Rajput(160210107047)">
     <!-- Favicon icon -->
-    <link rel="icon" href="{% static 'assests/images/favicon.ico' %}" type="image/x-icon">
+    <link rel="icon" href="{% static 'assets/images/favicon.ico' %}" type="image/x-icon">
     <!-- Google font-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
     <!-- Required Fremwork -->
@@ -83,7 +83,6 @@
                     </a>
                 </div>
                     <div class="navbar-container container-fluid">
-
                     <ul class="nav-right">
 
                         <li class="user-profile header-notification">
@@ -100,7 +99,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="change_password.html">
+                                        <a href="../home_auth/change_password.html">
                                             <i class="feather icon-log-out"></i> Logout
                                         </a>
                                     </li>
