--- a/StudentSupport/templates/hod/hod_dashboard.html
+++ b/StudentSupport/templates/hod/hod_dashboard.html
@@ -204,7 +204,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="change_password.html">
+                                        <a href="../home_auth/change_password.html">
                                             <i class="feather icon-log-out"></i> Logout
                                         </a>
                                     </li>
