--- a/StudentSupport/templates/home_auth/index.html
+++ b/StudentSupport/templates/home_auth/index.html
@@ -15,7 +15,7 @@
     <script src="{% static 'assets/js/material-components-web.min.js' %}"></script>
 <!--    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">-->
     <!-- Favicon icon -->
-{#    <link rel="icon" href="{% static 'assets/images/favicon.ico' %}" type="image/x-icon">#}
+    <link rel="icon" href="{% static 'assets/images/favicon.ico' %}" type="image/x-icon">
     <!-- Google font-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 
