--- a/StudentSupport/templates/faculty/view_detailed_feedback.html
+++ b/StudentSupport/templates/faculty/view_detailed_feedback.html
@@ -7,7 +7,7 @@
     <!-- Meta -->
     <meta name="author" content="Jasmin Makwana(160210107030), Kinjal Doshi(160210107011), Jinesh Kamdar(160210107024), Vishwa Rajput(160210107047)">
     <!-- Favicon icon -->
-    <link rel="icon" href="{% static 'assests/images/favicon.ico' %}" type="image/x-icon">
+    <link rel="icon" href="{% static 'assets/images/favicon.ico' %}" type="image/x-icon">
     <!-- Google font-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
     <!-- Required Fremwork -->
@@ -208,7 +208,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="change_password.html">
+                                        <a href="../home_auth/change_password.html">
                                             <i class="feather icon-log-out"></i> Logout
                                         </a>
                                     </li>
@@ -231,12 +231,7 @@
                                         <span class="pcoded-mtext">My Profile</span>
                                     </a>
                                 </li>
-                                <li class="">
-                                    <a href="#">
-                                        <span class="pcoded-micon"><i class="feather icon-user"></i></span>
-                                        <span class="pcoded-mtext">Manage Department</span>
-                                    </a>
-                                </li>
+
                                 <ul class="pcoded-item pcoded-left-item">
                                     <li class="pcoded-hasmenu">
                                         <a href="javascript:void(0)">
@@ -245,7 +240,7 @@
                                         </a>
                                         <ul class="pcoded-submenu">
                                             <li class=" ">
-                                                <a href="{% url 'hod_view_detailed_feedback' %}">
+                                                <a href="#">
                                                     <span class="pcoded-mtext">Mid Semester</span>
                                                 </a>
                                             </li>
@@ -270,7 +265,7 @@
                                         </a>
                                         <ul class="pcoded-submenu">
                                             <li class=" ">
-                                                <a href="{% url 'hod_view_average_feedback' %}">
+                                                <a href="form-elements-component.htm">
                                                     <span class="pcoded-mtext">Mid Semester</span>
                                                 </a>
                                             </li>
@@ -320,19 +315,6 @@
                                                 <div class="card">
                                                     <div class="card-block">
                                                         <form>
-                                                            <div class="form-group row">
-                                                            <label class="col-sm-4 col-form-label">Select Faculty To View Feedback</label>
-                                                            <div class="col-sm-8">
-                                                                <select name="select" class="form-control">
-                                                                    <option value="opt1">Select Faculty</option>
-                                                                    <option value="opt2">Prof. Karshan Kandoriya</option>
-                                                                    <option value="opt3">Prof. Ashish Nimavat</option>
-                                                                    <option value="opt4">Prof. Bhavna Bhattu</option>
-                                                                    <option value="opt5">Prof. Hetal Mawani</option>
-                                                                    <option value="opt6">Prof. Nishant Makwana</option>
-                                                                </select>
-                                                            </div>
-                                                        </div>
                                                             <div class="form-group row">
                                                             <label class="col-sm-4 col-form-label">Select Subject To View Feedback</label>
                                                             <div class="col-sm-8">
