--- a/StudentSupport/templates/students/student_profile_page.html
+++ b/StudentSupport/templates/students/student_profile_page.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-    <title>Faculty Profile</title>
+    <title>Student Profile</title>
     <!-- Meta -->
     <meta name="author" content="Jasmin Makwana(160210107030), Kinjal Doshi(160210107011), Jinesh Kamdar(160210107024), Vishwa Rajput(160210107047)">
     <!-- Favicon icon -->
@@ -71,7 +71,42 @@
                <div class="modal-body">
                     <form>
                         <div class="form-group row">
-                            <label class="col-sm-2 col-form-label">Name</label>
+                            <label class="col-sm-2 col-form-label">First Name</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-sm-2 col-form-label">Last Name</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-sm-2 col-form-label">Email Id</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control">
+                            </div>
+                        </div>
+                        <button class="btn btn-large btn-primary f-right">Save changes</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+     <div class="modal fade" id="large-Modal1" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Academic Detail</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+               <div class="modal-body">
+                    <form>
+                        <div class="form-group row">
+                            <label class="col-sm-2 col-form-label">Enrollment Number</label>
                             <div class="col-sm-10">
                                 <input type="text" class="form-control">
                             </div>
@@ -91,10 +126,20 @@
                                </div>
                         </div>
                         <div class="form-group row">
-                            <label class="col-sm-2 col-form-label">Email Id</label>
+                            <label class="col-sm-2 col-form-label">Semester</label>
                             <div class="col-sm-10">
-                                <input type="email" class="form-control">
-                            </div>
+                                   <select name="select" class="form-control">
+                                       <option value="opt1">Select Semester</option>
+                                       <option value="opt2">1</option>
+                                       <option value="opt3">2</option>
+                                       <option value="opt4">3</option>
+                                       <option value="opt5">4</option>
+                                       <option value="opt6">5</option>
+                                       <option value="opt7">6</option>
+                                       <option value="opt7">7</option>
+                                       <option value="opt7">8</option>
+                                   </select>
+                               </div>
                         </div>
                         <button class="btn btn-large btn-primary f-right">Save changes</button>
                     </form>
@@ -151,7 +196,7 @@
             <div class="pcoded-main-container">
                 <div class="pcoded-wrapper">
                     <nav class="pcoded-navbar">
-                         <div class="pcoded-inner-navbar main-menu">
+                        <div class="pcoded-inner-navbar main-menu">
                             <div class="pcoded-navigatio-lavel">Quick Links</div>
                             <ul class="pcoded-item pcoded-left-item">
                                 <li class="">
@@ -160,52 +205,16 @@
                                         <span class="pcoded-mtext">My Profile</span>
                                     </a>
                                 </li>
-
-                                <ul class="pcoded-item pcoded-left-item">
-                                    <li class="pcoded-hasmenu">
-                                        <a href="javascript:void(0)">
-                                            <span class="pcoded-micon"><i class="feather icon-pie-chart"></i></span>
-                                            <span class="pcoded-mtext">View Detaied Feedback</span>
-                                        </a>
-                                        <ul class="pcoded-submenu">
-                                            <li class=" ">
-                                                <a href="{% url 'view_detailed_feedback' %}">
-                                                    <span class="pcoded-mtext">Mid Semester</span>
-                                                </a>
-                                            </li>
-                                            <li class=" ">
-                                                <a href="form-elements-add-on.htm">
-                                                    <span class="pcoded-mtext">End Semester</span>
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                                <ul class="pcoded-item pcoded-left-item">
-                                    <li class="pcoded-hasmenu">
-                                        <a href="javascript:void(0)">
-                                            <span class="pcoded-micon"><i class="feather icon-pie-chart"></i></span>
-                                            <span class="pcoded-mtext">View Average Feedback</span>
-                                        </a>
-                                        <ul class="pcoded-submenu">
-                                            <li class=" ">
-                                                <a href="{% url 'view_average_feedback' %}">
-                                                    <span class="pcoded-mtext">Mid Semester</span>
-                                                </a>
-                                            </li>
-                                            <li class=" ">
-                                                <a href="form-elements-add-on.htm">
-                                                    <span class="pcoded-mtext">End Semester</span>
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                </ul>
                                 <li class="">
                                     <a href="#">
-                                        <span class="pcoded-micon"><i class="feather icon-layers"></i></span>
-                                        <span class="pcoded-mtext" data-toggle="modal" data-target="#large-Modal">Publish News
-                                        </span>
+                                        <span class="pcoded-micon"><i class="feather icon-server"></i></span>
+                                        <span class="pcoded-mtext">View Complaints</span>
+                                    </a>
+                                </li>
+                                <li class="">
+                                    <a href="#">
+                                        <span class="pcoded-micon"><i class="feather icon-pie-chart"></i></span>
+                                        <span class="pcoded-mtext">View Feedback</span>
                                     </a>
                                 </li>
                                 <li class="">
@@ -236,8 +245,8 @@
                                         <div class="col-lg-4">
                                             <div class="page-header-breadcrumb">
                                                 <ul class="breadcrumb-title">
-                                                    <a href="{% url 'faculty_dashboard' %}"> <i class="zmdi zmdi-arrow-left"></i> </a>
-                                                    <a href="{% url 'faculty_dashboard' %}">Back To Dashboard</a>
+                                                    <a href="{% url 'student_dashboard' %}"> <i class="zmdi zmdi-arrow-left"></i> </a>
+                                                    <a href="{% url 'student_dashboard' %}">Back To Dashboard</a>
                                                 </ul>
                                             </div>
                                         </div>
@@ -248,11 +257,15 @@
                                         <div class="card-block">
                                             <div class="row">
                                                 <div class="col-lg-12 col-xl-12">
-                                                    <div class="sub-title">Karshan Kandoriya</div>
+                                                    <div class="sub-title">Jasmin Makwana</div>
                                                     <!-- Nav tabs -->
                                                     <ul class="nav nav-tabs md-tabs tabs-left b-none" role="tablist">
                                                         <li class="nav-item">
                                                             <a class="nav-link active" data-toggle="tab" href="#personaldetail" role="tab" style="font-size: 12pt; width: 180px;">Personal Details</a>
+                                                            <div class="slide"></div>
+                                                        </li>
+                                                        <li class="nav-item">
+                                                            <a class="nav-link" data-toggle="tab" href="#academicdetail" role="tab" style="font-size: 12pt; width: 180px;">Academic Details</a>
                                                             <div class="slide"></div>
                                                         </li>
                                                         <li class="nav-item">
@@ -266,21 +279,42 @@
                                                             <form action="#" method="post">
                                                             {% csrf_token %}
                                                                 <div class="form-group row">
-                                                                    <label class="col-sm-2 col-form-label" style="padding: 6px 15px; font-weight:900;">Name :</label>
-                                                                    <label class="col-sm-6 col-form-label">Karshan Kandoriya</label>
+                                                                    <label class="col-sm-2 col-form-label" style="padding: 6px 15px; font-weight:900;">First Name :</label>
+                                                                    <label class="col-sm-6 col-form-label">Jasmin</label>
+                                                                </div>
+                                                                <div class="form-group row">
+                                                                    <label class="col-sm-2 col-form-label" style="padding: 6px 15px; font-weight:900;">Last Name :</label>
+                                                                    <label class="col-sm-6 col-form-label">Makwana</label>
                                                                 </div>
                                                                 <div class="form-group row">
                                                                     <label class="col-sm-2 col-form-label" style="padding: 6px 15px; font-weight:900;">Email ID :</label>
-                                                                    <label class="col-sm-6 col-form-label">karshan123@gmail.com</label>
-                                                                </div>
-                                                                <div class="form-group row">
-                                                                    <label class="col-sm-2 col-form-label" style="padding: 6px 15px; font-weight:900;">Department :</label>
-                                                                    <label class="col-sm-6 col-form-label">Computer Engineering</label>
+                                                                    <label class="col-sm-6 col-form-label">Jasmin123@gmail.com</label>
                                                                 </div>
                                                            </form>
                                                             <div class="form-group row">
                                                                 <label class="col-sm-2 col-form-label" style="padding: 6px 15px; font-weight:900;"></label>
                                                                 <button class="btn btn-primary pcoded-mtext" data-toggle="modal" data-target="#large-Modal">Edit Profile</button>
+                                                            </div>
+                                                        </div>
+                                                        <div class="tab-pane" id="academicdetail" role="tabpanel">
+                                                            <form action="#" method="post">
+                                                            {% csrf_token %}
+                                                                <div class="form-group row">
+                                                                    <label class="col-sm-2 col-form-label" style="padding: 6px 15px; font-weight:900;">Enrollment Number :</label>
+                                                                    <label class="col-sm-6 col-form-label">160210107033</label>
+                                                                </div>
+                                                                <div class="form-group row">
+                                                                    <label class="col-sm-2 col-form-label" style="padding: 6px 15px; font-weight:900;">Department :</label>
+                                                                    <label class="col-sm-6 col-form-label">Computer Engineering</label>
+                                                                </div>
+                                                                <div class="form-group row">
+                                                                    <label class="col-sm-2 col-form-label" style="padding: 6px 15px; font-weight:900;">Semester :</label>
+                                                                    <label class="col-sm-6 col-form-label">8th</label>
+                                                                </div>
+                                                           </form>
+                                                            <div class="form-group row">
+                                                                <label class="col-sm-2 col-form-label" style="padding: 6px 15px; font-weight:900;"></label>
+                                                                <button class="btn btn-primary pcoded-mtext" data-toggle="modal" data-target="#large-Modal1">Edit Academic</button>
                                                             </div>
                                                         </div>
                                                         <div class="tab-pane" id="changepassword" role="tabpanel">
